# FastAPI-project

./: .gitignore  pyproject.toml
tests/: test_app.py
